
SVN
-------------------------------

Doc:   Resolved issue CASTOR-1752 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update xmlschema.xml srcgen documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1752
       (Edward - 20061222)

Doc:   Resolved issue CASTOR-1751 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup/update of srcgen/test documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1751
       (Edward - 20061221)

Doc:   Resolved issue CASTOR-1750 using contribution from Edward Kuns [edward.kuns@aspect.com]
       General cleanup of several documentation files
       Details: http://jira.codehaus.org/browse/CASTOR-1750
       (Edward - 20061221)

All:   Resolved issue CASTOR-1749 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update comments in castor.properties
       Details: http://jira.codehaus.org/browse/CASTOR-1749
       (Edward - 20061221)

XML:   Resolved issue CASTOR-1738 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up Castor XML; remove unnecessary replacements of Java 1.2 classes
       Details: http://jira.codehaus.org/browse/CASTOR-1738
       (Edward - 20061220)

XML:   Resolved issue CASTOR-597 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Have SourceGenerator use a separate packages for class descriptor classes
       Details: http://jira.codehaus.org/browse/CASTOR-597
       (Edward - 20061220)

XML:   Resolved issue CASTOR-1746 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Enhanced ClassNameCRStrategy with dealWithFileOverwrite() functionality.
       Details: http://jira.codehaus.org/browse/CASTOR-1746
       (Werner - 20061220)

XML:   Resolved issue CASTOR-1745 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update and extend comments in castorbuilder.properties
       Details: http://jira.codehaus.org/browse/CASTOR-1745