@@ -2,6 +2,12 @@
 SVN
 -------------------------------
 
+
+XML:   Resolved issue CASTOR-1748 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Removed state pool in UnmarshalHandler.
+       Details: http://jira.codehaus.org/browse/CASTOR-1748
+       (Werner - 20061222)
+
 Doc:   Resolved issue CASTOR-1752 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Update xmlschema.xml srcgen documentation
        Details: http://jira.codehaus.org/browse/CASTOR-1752
